# gridmd

./: .gitignore  DIRECTIVES.md  FORMATTING.md  HANDOVER.md  INTEROP.md  LICENSE  Makefile  PLAN.md  Package.swift  README.md  SPEC.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
conformance/: README.md
conformance/expected/: 01-cells.json  02-structure.json  03-features.json  quarterly-report.json
conformance/fixtures/: 01-cells.gmd  02-structure.gmd  03-features.gmd
conformance/invalid/: bad-table-headers.gmd  duplicate-cell.gmd  orphan-spill-cache.gmd
examples/: quarterly-report.gmd
go/: .gitignore  README.md  coverage.sh  go.mod
js/: package.json
js/src/: dump.js  parser.js  refs.js  scalar.js  validate.js  xml.js
js/test/: calc.test.js  calc.test.ts  chartex.test.ts  coverage-core.test.ts  coverage-edges.test.ts  coverage-extra.test.ts  coverage-final.test.ts  coverage-final2.test.ts  xlsx.test.js  (+12 more)
python/: .gitignore  README.md  pyproject.toml
python/src/gridmd/: __init__.py  __main__.py  cli.py  dump.py  model.py  numfmt.py  parser.py  refs.py  scalar.py  validate.py  xlsxread.py  xlsxwrite.py  zipio.py
python/tests/: __init__.py  conftest.py  test_cli.py  test_conformance.py  test_dump.py  test_model.py  test_numfmt.py  test_parser.py  test_refs.py  test_scalar.py  test_validate.py  test_xlsx.py  test_yaml_subset.py
rust/: Cargo.toml  README.md
scripts/: conformance.sh  gridmd-js.sh
src/: calc.js  index.js
swift/: README.md  coverage.sh
test/: calc.test.js  example.test.js  roundtrip.test.js  xlsx.test.js
(+79 files in other folders)
