[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gridmd"
version = "0.1.0"
description = "GridMD — a plain-text spreadsheet format with a two-way XLSX converter and canonical dumper"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GridMD" }]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "coverage>=7"]

[project.scripts]
gridmd = "gridmd.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["gridmd"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["gridmd"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = false
